--- a/client/imports/services-form/services-form.html
+++ b/client/imports/services-form/services-form.html
@@ -1,4 +1,4 @@
-<form [ngFormModel]="partiesForm" #f="ngForm" (submit)="addParty(f.value)">
+<form [ngFormModel]="servicesForm" #f="ngForm" (submit)="addService(f.value)">
   <label>Name</label>
   <input type="text" ngControl="name">
   <label>Description</label>
