--- a/client/imports/services-list/services-list.html
+++ b/client/imports/services-list/services-list.html
@@ -6,10 +6,9 @@
   <h1>Services:</h1>
   <ul>
     <li *ngFor="let service of services | paginate:{currentPage: 1, itemsPerPage: pageSize, totalItems: servicesSize}">
-      <a [routerLink]="['/service', service._id]">{{service.name}}</a>
+      <a [routerLink]="['/service', service._id]">{{service.type}}</a>
       <p>{{service.description}}</p>
-      <p>{{service.location}}</p>
-      <p *ngFor="let tag of service.tags"> {{tag}}</p>
+      <p *ngFor="let tag of service.tags"> {{tag.name}}</p>
       <button (click)="removeService(service)">X</button>
     </li>
   </ul>
