Add style to main page and hastags autocomplete

--- a/client/app.html
+++ b/client/app.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="topMenuBar">
+	<login-buttons class="loginButtons"></login-buttons>
+</div>
+<div class="mainContainer">
+	<router-outlet></router-outlet>
+</div>
