--- a/client/imports/services-list/services-list.html
+++ b/client/imports/services-list/services-list.html
@@ -1,16 +1,55 @@
-<div>
-  <services-form style="float: left"></services-form>
-  <input type="text" #searchtext placeholder="Search by Location">
-  <button type="button" (click)="search(searchtext.value)">Search</button>
-  
-  <h1>Services:</h1>
-  <ul>
-    <li *ngFor="let service of services | paginate:{currentPage: 1, itemsPerPage: pageSize, totalItems: servicesSize}">
-      <a [routerLink]="['/service', service._id]">{{service.type}}</a>
-      <p>{{service.description}}</p>
-      <p *ngFor="let tag of service.tags"> {{tag.name}}</p>
-      <button (click)="removeService(service)">X</button>
-    </li>
-  </ul>
-  <pagination-controls (change)="onPageChanged($event.page)"></pagination-controls>
+<div class="searchService row">
+  <div class="searchBox col-md-6">
+    <div class="searchHeader">
+      <h1>Busca:</h1>
+      <h4>Configura tu criterio de búsqueda</h4>
+    </div>
+    <span class="searchTitle">Tipo</span>
+    <div class="typeRange">
+      <div id="row"> 
+        <div class="typeRangeLeft col-md-4">Demanda</div> 
+        <div class="typeRangeCenter col-md-4">Todo</div> 
+        <div class="typeRangeRight col-md-4">Oferta</div> 
+      </div>
+      <input class="bar" type="range" id="typeRangeInput" min="1" max="3" step="1"/>
+    </div>
+    <span class="searchTitle">Precio</span>
+    <div class="priceRange">
+      <div id="row">
+        <div class="priceRange1 col-md-1">1/2</div> 
+        <div class="priceRange2 col-md-1">1h</div> 
+        <div class="priceRange3 col-md-1">1h 1/2</div>
+        <div class="priceRange1 col-md-1">2h</div>
+        <div class="priceRange4 col-md-1">2h 1/2</div>
+        <div class="priceRange5 col-md-1">3h</div>
+        <div class="priceRange6 col-md-1">3h 1/2</div>
+        <div class="priceRange7 col-md-1">4h</div>
+        <div class="priceRange8 col-md-1">4h 1/2</div>
+        <div class="priceRange9 col-md-1">5h</div>
+        <div class="priceRange10 col-md-1">5h 1/2</div>
+        <div class="priceRange11 col-md-1">6h</div>
+      </div>
+      <input class="bar" type="range" id="priceRangeInput" min="1" max="12" step="1" />
+    </div>
+    <span class="searchTitle">Palabras Clave</span> <span class="searchTitleSmall">(#tubusqueda)</span>
+    <hashtag-autocomplete (hashTagsSelectedSent)="getHashTags($event);"></hashtag-autocomplete>
+  </div>
+  <div class="col-md-6">
+    <div class="resultHeader">
+      <h1>Encuentra:</h1>
+      <h4>Accede a los resultados que te interesen</h4>
+    </div>
+    <div class="resultContent">
+      
+    </div>
+    <ul>
+      <li *ngFor="let service of services">
+        <a [routerLink]="['/service', service._id]">{{service.type}}</a>
+        <p>{{service.description}}</p>
+        <p *ngFor="let tag of service.tags"> {{tag.name}}</p>
+        <button (click)="removeService(service)">X</button>
+      </li>
+    </ul>
+  </div>
+  <!--<services-form style="float: left"></services-form>-->
 </div>
