Add ViewChild App to connect diferent modules, add service detail in main page, add search service

--- a/client/app.html
+++ b/client/app.html
@@ -1,4 +1,5 @@
 <div class="topMenuBar">
+	<a [routerLink]="['/addservice']">Add Service</a>
 	<login-buttons class="loginButtons"></login-buttons>
 </div>
 <div class="mainContainer">
