--- a/client/imports/hashtag-autocomplete/hashtag-autocomplete.html
+++ b/client/imports/hashtag-autocomplete/hashtag-autocomplete.html
@@ -1,6 +1,6 @@
 <div class="autocompleteContent row">
   <div class="autocompleteSelector col-md-4">
-    <input type="text" id="autocompleteTags" #searchtext placeholder="Search by HashTags" (input)="search(searchtext.value)" (keypress)="addTagToList($event)" (keyup)="arrowSelectedElement($event)">
+    <input type="text" id="autocompleteTags" #searchtext placeholder="Search by HashTags" autocomplete="off" (input)="search(searchtext.value)" (keypress)="addTagToList($event)" (keyup)="arrowSelectedElement($event)" >
     <div class="autocompleteBox" *ngIf="hashtags">
       <div class="autocompleteBoxElement selectedBoxElement-{{hashtag._id}}" *ngFor="let hashtag of hashtags" (click)="addTagToListClick(hashtag.name)">
         {{hashtag.name}}
