--- a/client/imports/service-details/service-details.html
+++ b/client/imports/service-details/service-details.html
@@ -1,3 +1,4 @@
+<button (click)="closeService()"></button>
 <form (submit)="saveService(service)" *ngIf="service">
   <label>Name</label>
   <input type="text" [(ngModel)]="service.name">
